--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "Fahim Nasir",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
     "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.14",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.8"
   }
 }
